fix(_base.scss): remove overflow hidden of #dashboard

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -11,11 +11,6 @@ body {
   background-color: $body-bg;
 }
 
-#dashboard {
-  width: 100%;
-  overflow: hidden;
-}
-
 .main-container {
   position: relative;
   height: auto;
